projects/blog-hs: 5.3 convert to stack/cabal project structure

--- a/projects/blog-hs/Makefile
+++ b/projects/blog-hs/Makefile
@@ -1,2 +1,11 @@
-all:
-	@stack runghc main.hs
+build:
+	stack build
+
+exec:
+	stack exec hs-blog-gen -- # <input-file> <output-file>
+
+ghci:
+	stack ghci hs-blog
+
+clean:
+	stack clean
